# end-to-end-ml-project-with-mlflow

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  main.py  mlflow.db  pyproject.toml  requirements.txt  setup.py
.dvc/: config
config/: config.yaml
mlruns/0/models/m-94ccf94369c24afcaa758da564b2c9eb/artifacts/: MLmodel  conda.yaml  model.pkl  requirements.txt
research/: 01_data_ingestion.ipynb  02_data_validation.ipynb  03_data_transformation.ipynb  04_model_trainer.ipynb  05_model_evaluation.ipynb  trials.ipynb
src/mlProject/components/: model_evaluation.py
src/mlProject/config/: configuration.py
